--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ License: MIT + file LICENSE
 Depends:
 	splines (>= 3.6.0),
 	quadprog (>= 1.5.7),
-	ggplot2
+	ggplot2,
+	R (>= 2.10)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
