--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,11 @@ Depends:
 	quadprog (>= 1.5.7),
 	ggplot2,
 	R (>= 2.10)
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 2.1.0)
+VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
