--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,9 @@ Title: Excess Certainty Adjusted Probability Estimate
 Version: 0.1.0
 Author: Bradley Rava, Peter Radchenko, and Gareth M. James
 Maintainer: Bradley Rava <brava@marshall.usc.edu>
-Description: Implements the Excess Certainty Adjusted Probability adjustment procedure as described in the paper "Irrational Exuberance: Correcting Bias in Probability Estimates". The package includes a function that preforms the adjustment and a function that estimates the parameters needed to implement it.
+Description: Implements the Excess Certainty Adjusted Probability adjustment procedure as described in the paper "Irrational Exuberance: Correcting Bias in Probability Estimates" by Gareth James, Peter Radchenko, and Bradley Rava (Journal of the American Statistical Association, 2020;  <doi:10.1080/01621459.2020.1787175>). The package includes a function that preforms the ECAP adjustment and a function that estimates the parameters needed for implementing ECAP. For testing and reproducibility, the ESPN and FiveThirtyEight data used in the paper are also included.	
 License: MIT + file LICENSE
-URL: http://faculty.marshall.usc.edu/gareth-james/Research/Probs.pdf
+URL: <http://faculty.marshall.usc.edu/gareth-james/Research/Probs.pdf>
 Depends:
 	splines (>= 3.6.0),
 	quadprog (>= 1.5.7),
