--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: ecap
 Type: Package
 Title: Excess Certainty Adjusted Probability Estimate
-Version: 0.1.1
+Version: 0.1.2
 Author: Bradley Rava, Peter Radchenko, and Gareth M. James
 Maintainer: Bradley Rava <brava@marshall.usc.edu>
-Description: Implements the Excess Certainty Adjusted Probability adjustment procedure as described in the paper "Irrational Exuberance: Correcting Bias in Probability Estimates" by Gareth James, Peter Radchenko, and Bradley Rava (Journal of the American Statistical Association, 2020;  <arXiv:1910.13570>). The package includes a function that preforms the ECAP adjustment and a function that estimates the parameters needed for implementing ECAP. For testing and reproducibility, the ESPN and FiveThirtyEight data used in the paper are also included.	
-License: MIT + file LICENSE 
+Description: Implements the Excess Certainty Adjusted Probability adjustment procedure as described in the paper "Irrational Exuberance: Correcting Bias in Probability Estimates" by Gareth James, Peter Radchenko, and Bradley Rava (Journal of the American Statistical Association, 2020;  <doi:10.1080/01621459.2020.1787175>). The package includes a function that preforms the ECAP adjustment and a function that estimates the parameters needed for implementing ECAP. For testing and reproducibility, the ESPN and FiveThirtyEight data used in the paper are also included.	
+License: GPL-3
 URL: <http://faculty.marshall.usc.edu/gareth-james/Research/Probs.pdf>
 Depends:
 	splines (>= 3.6.0),
 	quadprog (>= 1.5.7),
 	ggplot2,
-	R (>= 3.5.0)
+	R (>= 3.4.0)
 Suggests: 
     knitr,
     rmarkdown,
